@@ -76,7 +76,7 @@ public class DielectricCanvas extends CLCanvas {
             }
         } );
         
-        mvt = new ModelViewTransform( CLConstants.MVT_SCALE, CLConstants.MVT_OFFSET );
+        mvt = new ModelViewTransform( CLConstants.MVT_SCALE, CLConstants.MVT_OFFSET, CLConstants.PITCH_VIEWING_ANGLE, CLConstants.YAW_VIEWING_ANGLE );
         
         batteryNode = new BatteryNode( model.getBattery(), CLConstants.BATTERY_VOLTAGE_RANGE );
         capacitorNode = new CapacitorNode( model.getCircuit(), mvt, dev );
